Fixing problem with class name sceneBuilder.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,9 @@ set(SOURCE_FILES
         src/model.cpp
         src/model.h
         src/sceneBuilder.cpp
-        src/sceneBuilder.h src/special_effects.cpp src/special_effects.h)
+        src/sceneBuilder.h
+        src/special_effects.cpp
+        src/special_effects.h)
 
 add_executable(Gallery_of_Alcohol ${SOURCE_FILES})
 
